[project]
name = "async-fivem"
version = "1.1.0"
description = "Async API for FiveM endpoints"
authors = [{ name = "makubob", email = "makupi@icloud.com" }]
requires-python = ">=3.6,<4"
readme = "README.md"
license = "GPL-3.0-only"
dependencies = [
    "aiohttp>=3.7.4,<4.0.0",
    "toml>=0.10.0,<0.11",
]

[project.urls]
Repository = "https://github.com/makupi/async-fivem"

[dependency-groups]
dev = [
    "aiohttp>=3.7.4,<4.0.0",
    "python-dotenv>=0.13.0,<0.14",
]

[tool.uv.build-backend]
module-name = ["fivem"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"
